<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overall_collection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/options_collection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Spinner
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="fill_horizontal"
            android:entries="@array/difficulty_array"
            android:prompt="@string/get_game_size_text"
            android:spinnerMode="dialog"
            android:text="@string/get_game_size_text" />

        <TextView
            android:id="@+id/difficulty_prompt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/difficulty" />

        <TextView
            android:id="@+id/moves_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:text="@string/moves_default" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tower_collection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/options_collection" >

        <Button
            android:id="@+id/left_tower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="makeMove"
            android:text="@string/left_tower" />

        <Button
            android:id="@+id/center_tower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="makeMove"
            android:text="@string/center_tower" />

        <Button
            android:id="@+id/right_tower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="makeMove"
            android:text="@string/right_tower" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/message_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/message_box_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/menu_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="left"
            android:onClick="reset"
            android:text="@string/reset_game" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="exit"
            android:text="@string/exit_game" />
    </RelativeLayout>

</RelativeLayout>